oss 功能
