# api/kvstore/v1/kv.pb.validate.go
@@ -1,0 +1,250 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: api/kvstore/v1/kv.proto
+
+package v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on KvRequest with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *KvRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on KvRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in KvRequestMultiError, or nil
+// if none found.
+func (m *KvRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *KvRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if l := utf8.RuneCountInString(m.GetKey()); l < 1 || l > 10 {
+		err := KvRequestValidationError{
+			field:  "Key",
+			reason: "value length must be between 1 and 10 runes, inclusive",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	// no validation rules for Data
+
+	if len(errors) > 0 {
+		return KvRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// KvRequestMultiError is an error wrapping multiple validation errors returned
+// by KvRequest.ValidateAll() if the designated constraints aren't met.
+type KvRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m KvRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m KvRequestMultiError) AllErrors() []error { return m }
+
+// KvRequestValidationError is the validation error returned by
+// KvRequest.Validate if the designated constraints aren't met.
+type KvRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e KvRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e KvRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e KvRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e KvRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e KvRequestValidationError) ErrorName() string { return "KvRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e KvRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sKvRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = KvRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = KvRequestValidationError{}
+
+// Validate checks the field values on KvReply with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *KvReply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on KvReply with the rules defined in the
+// proto definition for this message. If any rules are violated, the result is
+// a list of violation errors wrapped in KvReplyMultiError, or nil if none found.
+func (m *KvReply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *KvReply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Code
+
+	// no validation rules for Data
+
+	if len(errors) > 0 {
+		return KvReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// KvReplyMultiError is an error wrapping multiple validation errors returned
+// by KvReply.ValidateAll() if the designated constraints aren't met.
+type KvReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m KvReplyMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m KvReplyMultiError) AllErrors() []error { return m }
+
+// KvReplyValidationError is the validation error returned by KvReply.Validate
+// if the designated constraints aren't met.
+type KvReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e KvReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e KvReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e KvReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e KvReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e KvReplyValidationError) ErrorName() string { return "KvReplyValidationError" }
+
+// Error satisfies the builtin error interface
+func (e KvReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sKvReply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = KvReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = KvReplyValidationError{}
