# openapi.yaml
@@ -3,72 +3,20 @@
 
 openapi: 3.0.3
 info:
-    title: Kv API
+    title: Oss API
     version: 0.0.1
 paths:
-    /kvstore:
-        post:
-            tags:
-                - Kv
-            operationId: Kv_Set
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/KvRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/KvReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /kvstore/{key}:
-        get:
-            tags:
-                - Kv
-            operationId: Kv_Get
-            parameters:
-                - name: key
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-                - name: data
-                  in: query
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/KvReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+    /oss/delete:
         delete:
             tags:
-                - Kv
-            operationId: Kv_Del
+                - Oss
+            operationId: Oss_Delete
             parameters:
-                - name: key
-                  in: path
-                  required: true
+                - name: bucket
+                  in: query
                   schema:
                     type: string
-                - name: data
+                - name: path
                   in: query
                   schema:
                     type: string
@@ -78,7 +26,61 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/KvReply'
+                                $ref: '#/components/schemas/OssReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /oss/get_url:
+        get:
+            tags:
+                - Oss
+            operationId: Oss_GetUrl
+            parameters:
+                - name: bucket
+                  in: query
+                  schema:
+                    type: string
+                - name: path
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/OssReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /oss/restore:
+        post:
+            tags:
+                - Oss
+            operationId: Oss_Restore
+            parameters:
+                - name: bucket
+                  in: query
+                  schema:
+                    type: string
+                - name: path
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/OssReply'
                 default:
                     description: Default error response
                     content:
@@ -95,20 +97,13 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        KvReply:
+        OssReply:
             type: object
             properties:
                 code:
                     type: integer
                     format: int32
-                data:
-                    type: string
-        KvRequest:
-            type: object
-            properties:
-                key:
-                    type: string
-                data:
+                url:
                     type: string
         Status:
             type: object
@@ -127,4 +122,4 @@ components:
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Kv
+    - name: Oss
